# aap-airwindows

./: .gitmodules  LICENSE  Makefile  README.md  build.gradle.kts  generate-aap-metadata.sh  settings.gradle
.github/workflows/: actions.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aap-airwindows.cpp  stub.cpp
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: aap_metadata.xml  midi_device_info.xml  ump_device_info.xml
